added Buttons to edit Webview