@@ -1,6 +1,8 @@
 package DummyKarteikarte;
 
+import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.scene.control.Button;
 import javafx.scene.web.WebView;
 
 import java.io.IOException;
@@ -10,6 +12,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class Controller {
+    public Button boldBtn;
+    public Button underlineBtn;
+    public Button italicBtn;
+    public Button smallerBtn;
+    public Button biggerBtn;
+
     @FXML
     WebView webView;
 
@@ -19,13 +27,14 @@ public class Controller {
     public void initialize() {
         Path filePath = Paths.get("src/Karteikarte.html");
         try {
-            webView.getEngine().loadContent(new String(Files.readAllBytes(filePath), StandardCharsets.UTF_8));
+            webView.getEngine().loadContent(Files.readString(filePath));
         } catch (IOException e) {
             e.printStackTrace();
         }
 
     }
 
+    @FXML
     private void makeBold() {
         webView.getEngine().executeScript("document.execCommand(\"bold\");");
     }
@@ -34,10 +43,12 @@ public class Controller {
         webView.getEngine().executeScript("document.execCommand(\"italic\");");
     }
 
+    @FXML
     private void makeUnderlined() {
         webView.getEngine().executeScript("document.execCommand(\"underline\");");
     }
 
+    @FXML
     private void increaseFontSize() {
         fontSize += 3;
         webView.getEngine().executeScript("document.execCommand(\"fontSize\", false, \"7\");" +
@@ -45,6 +56,7 @@ public class Controller {
                 "fontElements.removeAttribute(\"size\");" +
                 "fontElements.style.fontSize = \""+ fontSize + "px\";");    }
 
+    @FXML
     private void decreaseFontSize() {
         fontSize -= 3;
         webView.getEngine().executeScript("document.execCommand(\"fontSize\", false, \"7\");" +
@@ -52,4 +64,10 @@ public class Controller {
         "fontElements.removeAttribute(\"size\");" +
         "fontElements.style.fontSize = \""+ fontSize + "px\";");
     }
+
+
+    //Bold
+    //Italic
+    //Unterstrichen
+    //Größer/Kleiner
 }
